# CodeAdvent2025

./: main.py  pyproject.toml
day1/: main.py
day10/: main.py  results.json
day11/: main.py
day12/: main.py  pyproject.toml
day2/: main.py
day3/: main.py
day4/: main.py
day5/: main.py
day6/: main.py
day7/: main.py
day8/: main.py
day9/: main.py  main_part_two.py
einsum/: main.py  pyproject.toml
general_relativity/: general_relativity.py  main.ipynb  main.py  pyproject.toml  sympy_exercises.ipynb
